RESOLVED FIXED237255
[svg] stop-opacity should be clamped to the [0,1] range
https://bugs.webkit.org/show_bug.cgi?id=237255
Summary [svg] stop-opacity should be clamped to the [0,1] range
Antoine Quint
Reported 2022-02-27 09:21:34 PST
[svg] stop-opacity should be clamped to the [0,1] range
Attachments
Patch (4.58 KB, patch)
2022-02-27 09:22 PST, Antoine Quint
no flags
Antoine Quint
Comment 1 2022-02-27 09:22:16 PST
EWS
Comment 2 2022-02-27 12:57:09 PST
Committed r290569 (247847@main): <https://commits.webkit.org/247847@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453346 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-27 12:58:23 PST
Note You need to log in before you can comment on or make changes to this bug.