[svg] stop-opacity should be clamped to the [0,1] range https://bugs.webkit.org/show_bug.cgi?id=237255

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
* web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:

Source/WebCore:

* rendering/style/SVGRenderStyle.h:
(WebCore::SVGRenderStyle::setStopOpacity):



Canonical link: https://commits.webkit.org/247847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290569 268f45cc-cd09-0410-ab3c-d52691b4dbfc